--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>Damian Zalewski IT</header>
         <ul>
             <a href="#aboutMeAnchor"><li>O mnie</li></a>
-            <a href="#mySkillsAnchor"><li>Umiejętności</li></a>
+            <a href="#mySkillsAnchor"><li>Technologie</li></a>
             <a href="#projectsAnchor"><li>Projekty</li></a>
             <a href="#contactAnchor"><li>Kontakt</li></a>
         </ul>
@@ -39,14 +39,14 @@
                 Kim właściwie jestem?
             </header>
             <article>
-              <p>  Mam na imię Damian i studiuję obecnie na  Państwowej Wyższej Szkole Zawodowej w Elblągu na wydziale Informatyki Stosowanej.</p><p> W ciągu swojej nauki spotkałem się z wieloma różnymi językami jak np.: C, C++, C#, Java, Python a nawet Turbo Pascal, Fortran i Asembler.</p><p> Obecnie jednak zajmuje się głównie językami przeznaczonymi do projektowania stron internetowych. Jestem na etapie nauki Front-end’u jednak docelowo planuje rozszerzyć zakres także na back-end. </p>
+              <p>  Mam na imię Damian i ukończyłem studia na Państwowej Wyższej Szkole Zawodowej w Elblągu na wydziale Informatyki Stosowanej.</p><p> W ciągu swojej nauki spotkałem się z wieloma różnymi językami jak np.: C, C++, C#, Java, Python a nawet Turbo Pascal, Fortran i Asembler.</p><p> Obecnie jednak zajmuje się głównie językami przeznaczonymi do projektowania stron internetowych. Interesuje mnie zarówno "front end" jak i "back end".</p>
             </article>
         </div>
     </section>
     <span id="mySkillsAnchor"></span>
     <section class="mySkills">
         <header>
-            Main skills
+            Technologie 
         </header>
         <article>
             <figure>
@@ -62,60 +62,70 @@
                 <figcaption>JavaScript</figcaption>
             </figure>
             <figure>
-                <img src="img/react.png" alt="react logo">
-                <figcaption>React</figcaption>
-            </figure>
-        </article>
-    </section>
-      <section class="mySkills">
-        <header>
-            I also know...
-        </header>
-        <article>
-            <figure>
                 <img src="img/jQuery.png" alt="jQuery logo">
                 <figcaption>jQuery</figcaption>
+            </figure>
+            <figure>
+                <img src="img/react.png" alt="react logo">
+                <figcaption>React</figcaption>
             </figure>
             <figure>
                 <img src="img/github.png" alt="github logo">
                 <figcaption>Git/Github</figcaption>
             </figure>
             <figure>
-                <img src="img/sass.png" alt="Sass logo">
-                <figcaption>Sass</figcaption>
-            </figure>
-            <figure>
                 <img src="img/php.png" alt="php logo">
                 <figcaption>PHP</figcaption>
             </figure>
-
+            <figure>
+                <img src="img/ajax.png" alt="ajax logo">
+                <figcaption>Ajax</figcaption>
+            </figure>
+            <figure>
+                <img src="img/json.png" alt="json logo">
+                <figcaption>JSON</figcaption>
+            </figure>
+            <figure>
+                <img src="img/bootstrap.png" alt="bootstrap logo">
+                <figcaption>Bootstrap</figcaption>
+            </figure>
+            <figure>
+                <img src="img/rwd.png" alt="rwd logo">
+                <figcaption>RWD</figcaption>
+            </figure>
+            <figure>
+                <img src="img/wordpress.png" alt="wordpress logo">
+                <figcaption>Wordpress</figcaption>
+            </figure>
+            <figure>
+                <img src="img/prestashop.png" alt="PrestaShop logo">
+                <figcaption>PrestaShop</figcaption>
+            </figure>
+            <figure>
+                <img src="img/csharp.png" alt="c# logo">
+                <figcaption>C#</figcaption>
+            </figure>
+            <figure>
+                <img src="img/unity.png" alt="unity logo">
+                <figcaption>Unity</figcaption>
+            </figure>
+            <figure>
+                <img src="img/photoshop.png" alt="photoshop logo">
+                <figcaption>Photoshop</figcaption>
+            </figure>
         </article>
     </section>
-                <span id="projectsAnchor"></span>
+    <span id="projectsAnchor"></span>
     <section class="projects">
         <header>
             Projekty
         </header>
         <article>
-            <div class="wrapper">
-               <div id="back">&lt;</div>
-               <div id="forward">&gt;</div>
-                <div id="project1"></div>
-                <a href="/projects/TicTacToe/TicTacToe.html"><div class="projectDescription" id="projectDesc1">       
-                Tic Tac Toe              
-                </div></a>
-                <div id="project2"></div>
-                <a href="/projects/psdtohtml1/psdtohtml1.html"><div class="projectDescription" id="projectDesc2">PSDToHTML #1</div></a>
-                <div id="project3"></div>
-                 <a href="/projects/psdtohtml2/psdtohtml2.html"><div class="projectDescription" id="projectDesc3">PSDToHTML #2</div></a>
-                <div id="project4"></div>
-                 <a href="/projects/snakeGame/snakeGame.html"><div class="projectDescription" id="projectDesc4">Snake game</div></a>
-    
-            </div>
+            Lista projektów, które wykonałem podczas nauki i poszerzania wiedzy na temat programowania.
+            <button>Projekty</button>
         </article>
-  
     </section>
-          <span id="contactAnchor"></span>
+    <span id="contactAnchor"></span>
     <section class="contact">
         <header>
             Kontakt
@@ -127,7 +137,7 @@
         </article>
     </section>
     <footer>
-    Damian Zalewski &copy; 2018 
+    Damian Zalewski &copy; 2020
     </footer>
 </body>
 
