updated projects and contact sections, changed page icon

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,Damian,Zalewski,IT,Portfolio">
     <meta name="author" content="Damian Zalewski">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="favicon.ico">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
@@ -49,70 +49,78 @@
             Technologie 
         </header>
         <article>
-            <figure>
-                <img src="img/html5.png" alt="html5 logo">
-                <figcaption>HTML5</figcaption>
-            </figure>
-            <figure>
-                <img src="img/css3.png" alt="css3 logo">
-                <figcaption>CSS3</figcaption>
-            </figure>
-            <figure>
-                <img src="img/javascript.png" alt="javascript logo">
-                <figcaption>JavaScript</figcaption>
-            </figure>
-            <figure>
-                <img src="img/jQuery.png" alt="jQuery logo">
-                <figcaption>jQuery</figcaption>
-            </figure>
-            <figure>
-                <img src="img/react.png" alt="react logo">
-                <figcaption>React</figcaption>
-            </figure>
-            <figure>
-                <img src="img/github.png" alt="github logo">
-                <figcaption>Git/Github</figcaption>
-            </figure>
-            <figure>
-                <img src="img/php.png" alt="php logo">
-                <figcaption>PHP</figcaption>
-            </figure>
-            <figure>
-                <img src="img/ajax.png" alt="ajax logo">
-                <figcaption>Ajax</figcaption>
-            </figure>
-            <figure>
-                <img src="img/json.png" alt="json logo">
-                <figcaption>JSON</figcaption>
-            </figure>
-            <figure>
-                <img src="img/bootstrap.png" alt="bootstrap logo">
-                <figcaption>Bootstrap</figcaption>
-            </figure>
-            <figure>
-                <img src="img/rwd.png" alt="rwd logo">
-                <figcaption>RWD</figcaption>
-            </figure>
-            <figure>
-                <img src="img/wordpress.png" alt="wordpress logo">
-                <figcaption>Wordpress</figcaption>
-            </figure>
-            <figure>
-                <img src="img/prestashop.png" alt="PrestaShop logo">
-                <figcaption>PrestaShop</figcaption>
-            </figure>
-            <figure>
-                <img src="img/csharp.png" alt="c# logo">
-                <figcaption>C#</figcaption>
-            </figure>
-            <figure>
-                <img src="img/unity.png" alt="unity logo">
-                <figcaption>Unity</figcaption>
-            </figure>
-            <figure>
-                <img src="img/photoshop.png" alt="photoshop logo">
-                <figcaption>Photoshop</figcaption>
-            </figure>
+            <div>
+                <figure>
+                    <img src="img/html5.png" alt="html5 logo">
+                    <figcaption>HTML5</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/css3.png" alt="css3 logo">
+                    <figcaption>CSS3</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/javascript.png" alt="javascript logo">
+                    <figcaption>JavaScript</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/jQuery.png" alt="jQuery logo">
+                    <figcaption>jQuery</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="img/react.png" alt="react logo">
+                    <figcaption>React</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/github.png" alt="github logo">
+                    <figcaption>Git/Github</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/php.png" alt="php logo">
+                    <figcaption>PHP</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/ajax.png" alt="ajax logo">
+                    <figcaption>Ajax</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure>
+                    <img src="img/json.png" alt="json logo">
+                    <figcaption>JSON</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/bootstrap.png" alt="bootstrap logo">
+                    <figcaption>Bootstrap</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/rwd.png" alt="rwd logo">
+                    <figcaption>RWD</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/wordpress.png" alt="wordpress logo">
+                    <figcaption>Wordpress</figcaption>
+                </figure>
+            </div>
+            <div>
+                 <figure>
+                    <img src="img/prestashop.png" alt="PrestaShop logo">
+                    <figcaption>PrestaShop</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/csharp.png" alt="c# logo">
+                    <figcaption>C#</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/unity.png" alt="unity logo">
+                    <figcaption>Unity</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/photoshop.png" alt="photoshop logo">
+                    <figcaption>Photoshop</figcaption>
+                </figure>
+            </div>
         </article>
     </section>
     <span id="projectsAnchor"></span>
@@ -121,8 +129,21 @@
             Projekty
         </header>
         <article>
-            Lista projektów, które wykonałem podczas nauki i poszerzania wiedzy na temat programowania.
-            <button>Projekty</button>
+            <div class="projectsDescription">
+                <p>
+                    Lista projektów, które wykonałem podczas nauki i poszerzania wiedzy na temat programowania.
+                </p>
+                <p>
+                    Każdy z wykonanych projektów nauczył mnie czegoś nowego, poprzez stałe poznawanie nowych zagadnien udało mi się w znacznym stopniu usamodzielnić na polu programowania.
+                </p>
+                <p>
+                    Choć zdaję sobie sprawe ile jeszcze mam nauki przed sobą i szczerze powiedziawszy bardzo mnie to motywuje do działania.
+                </p>
+                <div class="projectsBtn">PROJEKTY</div>
+            </div>
+            <div class="projectsImg">
+                <img src="img/projects.png" alt="project image">
+            </div>
         </article>
     </section>
     <span id="contactAnchor"></span>
@@ -131,9 +152,11 @@
             Kontakt
         </header>
         <article>
-            E-mail: damian_zalewskipl@o2.pl <br /><br />
-           Github: <a href="https://www.github.com/DamianZalewski">www.github.com/DamianZalewski</a><br /><br />
-           Linkedin: <a href="https://www.linkedin.com/in/damian-zalewski-pl">www.linkedin.com/in/damian-zalewski-pl</a>
+            <div class="contactWrapper"> 
+                <p><i class="fas fa-at"></i> damian_zalewskipl@o2.pl</p>
+                <p><i class="fab fa-github"></i> <a href="https://www.github.com/DamianZalewski">www.github.com/DamianZalewski</a></p>
+                <p><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/damian-zalewski-pl">www.linkedin.com/in/damian-zalewski-pl</a></p>
+            </div>
         </article>
     </section>
     <footer>
