finished responsive web design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
  
 <body>
-    <nav>
+   <div class="pageWrapper">
+        <nav>
         <header>Damian Zalewski IT</header>
         <ul>
             <a href="#aboutMeAnchor"><li>O mnie</li></a>
@@ -162,6 +163,6 @@
     <footer>
     Damian Zalewski &copy; 2020
     </footer>
+   </div>
 </body>
-
 </html>
