added all projects

--- a/projects.html
+++ b/projects.html
@@ -30,14 +30,13 @@
             </ul>
         </nav>
         <section class="projectsExamples">
-            <div class="leftWrapper">
                 <div class="projectCard">
                     <header>
-                        Shop Page System ( <img src="img/javascript.png"> )
+                        Shop Page System ( <img src="img/bootstrap.png"> + <img src="img/php.png"> + <img src="img/jQuery.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/shopSystem.JPG" alt="Shop system image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        System sklepu internetowego wykonany z wykorzystaniem Bootstrap, PHP i JQuery.
                     </div>
                     <div class="overlay">
                         <a href="#">
@@ -55,19 +54,19 @@
 
                 <div class="projectCard">
                     <header>
-                        Landing Page #2 ( <img src="img/javascript.png"> )
+                        Landing Page #2 ( <img src="img/html5.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/landingPage2.JPG" alt="landing page 2 image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        Responsywny landing page wykonany z wykorzystaniem HTML5.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/LandingPage-1">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/landingPage2/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -77,19 +76,19 @@
 
                 <div class="projectCard">
                     <header>
-                        Idle Business Clicker ( <img src="img/javascript.png"> )
+                        Idle Business Clicker ( <img src="img/csharp.png"> + <img src="img/unity.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/idleBusinessClicker.png" alt="Idle Business Clicker image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        Gra Idle Business Clicker wykonana z wykorzystaniem C# + Unity.
                     </div>
                     <div class="overlay">
-                        <a href="#">
-                            <div class="iconContainer">
+<!--                        <a href="#">-->
+                            <div class="iconDisabled">
                                 <i class="fas fa-code"></i>
                             </div>
-                        </a>
-                        <a href="#">
+<!--                        </a>-->
+                        <a href="https://play.google.com/store/apps/details?id=com.ZalewskiStudio.IdleBusinessClicker">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -99,19 +98,19 @@
 
                 <div class="projectCard">
                     <header>
-                        Tim - Personal Motivator ( <img src="img/javascript.png"> )
+                        Tim - Personal Motivator ( <img src="img/csharp.png"> + <img src="img/unity.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/tim.JPG" alt="tim personal motivator image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        Gra Tim - Personal Motivator wykonana z wykorzystaniem C# + Unity.
                     </div>
                     <div class="overlay">
-                        <a href="#">
-                            <div class="iconContainer">
+<!--                        <a href="#">-->
+                            <div class="iconDisabled">
                                 <i class="fas fa-code"></i>
                             </div>
-                        </a>
-                        <a href="#">
+<!--                        </a>-->
+                        <a href="https://play.google.com/store/apps/details?id=com.ZalewskiStudio.Timpersonalmotivator">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -121,19 +120,19 @@
 
                 <div class="projectCard">
                     <header>
-                        AG Soccer ( <img src="img/javascript.png"> )
+                        AG Soccer ( <img src="img/csharp.png"> + <img src="img/unity.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/agSoccer.JPG" alt="AG Soccerimage">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        Gra AG Soccer wykonana z wykorzystaniem C# + Unity.
                     </div>
                     <div class="overlay">
-                        <a href="#">
-                            <div class="iconContainer">
+<!--                        <a href="#">-->
+                            <div class="iconDisabled">
                                 <i class="fas fa-code"></i>
                             </div>
-                        </a>
-                        <a href="#">
+<!--                        </a>-->
+                        <a href="https://play.google.com/store/apps/details?id=com.ZalewskiStudio.AGSoccer">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -143,19 +142,19 @@
 
                 <div class="projectCard">
                     <header>
-                        Rush Ball ( <img src="img/javascript.png"> )
+                        Rush Ball ( <img src="img/csharp.png"> + <img src="img/unity.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/rushBall.png" alt="Rush ball image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        Gra Rush Ball wykonana z wykorzystaniem C# + Unity.
                     </div>
                     <div class="overlay">
-                        <a href="#">
-                            <div class="iconContainer">
+<!--                        <a href="#">-->
+                            <div class="iconDisabled">
                                 <i class="fas fa-code"></i>
                             </div>
-                        </a>
-                        <a href="#">
+<!--                        </a>-->
+                        <a href="https://play.google.com/store/apps/details?id=com.ZalewskiStudio.RushBall">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -165,19 +164,19 @@
 
                 <div class="projectCard">
                     <header>
-                        PC #95 ( <img src="img/javascript.png"> )
+                        PC #95 - Sierpinski Triangle ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-sierpinskiTriangle.JPG" alt="sierpinski triangle image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        PC #95 : Implementacja Trójkątów Sierpińskiego z wykorzystaniem JS.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/95-Sierpinski-triangle">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/programmingChallenges/95-Sierpinski-triangle/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -187,19 +186,19 @@
 
                 <div class="projectCard">
                     <header>
-                        PC #65 ( <img src="img/javascript.png"> )
+                        PC #65 - Ulam spiral ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-ulamSpiral.JPG" alt="ulam spiral image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        PC #65 : Implementacja spirali Ulama z wykorzystaniem JS.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/65-Ulam-spiral">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/programmingChallenges/65-Ulam-spiral/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -209,19 +208,19 @@
 
                 <div class="projectCard">
                     <header>
-                        PC #42 ( <img src="img/javascript.png"> )
+                        PC #42 - ASCII digital clock ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-asciiClock.JPG" alt="ASCII digital clock image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        PC #42 : Zegarek ASCII wykonany z wykorzystanie JS.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/42-ASCII-digital-clock">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/programmingChallenges/42-ASCII-digital-clock/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -231,19 +230,19 @@
 
                 <div class="projectCard">
                     <header>
-                        PC #22 ( <img src="img/javascript.png"> )
+                        PC #22 - BMI Calculator ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-bmiCalculator.JPG" alt="bmi calculator image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        PC #22 : Kalkulator BMI wykonany z wykorzystaniem JS.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/22-BMI-Calculator">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/programmingChallenges/22-BMI-Calculator/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -253,19 +252,19 @@
 
                 <div class="projectCard">
                     <header>
-                        PC #08 ( <img src="img/javascript.png"> )
+                        PC #08 - Hangman ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/project1.PNG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-hangman.JPG" alt="hangman image">
                     <div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores qui nam inventore quos delectus, vero dolorum, provident fuga id magnam, amet! Laboriosam, amet quasi omnis veritatis eos ab! Autem, iusto.
+                        PC #08 : Gra w "wisielca" wykonana z wykorzystaniem JS.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/08-Hangman">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="projects/programmingChallenges/08-Hangman/index.html">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
@@ -277,9 +276,9 @@
                     <header>
                         PC #01 - Heads or Tails ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/pc-headsOrTails.JPG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-headsOrTails.JPG" alt="head or tails image">
                     <div class="description">
-                        Programming Challenges #01 : Gra "orzeł czy reszka" wykonana z wykorzystaniem JS.
+                        PC #01 : Gra "orzeł czy reszka" wykonana z wykorzystaniem JS.
                     </div>
                     <div class="overlay">
                         <a href="https://github.com/DamianZalewski/Programming-Challenges-v1.4/tree/master/01-Higher%20or%20Lower%20and%20Heads%20or%20Tails">
@@ -299,7 +298,7 @@
                     <header>
                         PC #00 - Names Generator ( <img src="img/javascript.png"> )
                     </header>
-                    <img class="projectImage" src="img/pc-namesGenerator.JPG" alt="project 1 image">
+                    <img class="projectImage" src="img/pc-namesGenerator.JPG" alt="names generator image">
                     <div class="description">
                         Programming Challenges #00 : Generator nazw wykonany z wykorzystaniem JS.
                     </div>
@@ -317,6 +316,7 @@
                     </div>
                 </div>
 
+<!--
                 <div class="projectCard">
                     <header>
                         PHP Gallery ( <img src="img/php.png"> )
@@ -338,6 +338,7 @@
                         </a>
                     </div>
                 </div>
+-->
 
                 <div class="projectCard">
                     <header>
@@ -426,7 +427,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
         </section>
     </div>
 </body>
