improved responsive design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
    <div class="pageWrapper">
     <nav>
-        <header><a href="index.html">Damian Zalewski IT</a></header>
+        <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
         <ul>
 <!--            <a href="#aboutMeAnchor"><li>O mnie</li></a>-->
 <!--            <a href="#mySkillsAnchor"><li>Technologie</li></a>-->
@@ -144,7 +144,9 @@
                 <p>
                     Choć zdaję sobie sprawe ile jeszcze mam nauki przed sobą i szczerze powiedziawszy bardzo mnie to motywuje do działania.
                 </p>
-                <div class="projectsBtn">PROJEKTY</div>
+                <a href="projects.html">
+                    <div class="projectsBtn">PROJEKTY</div>
+                </a>
             </div>
             <div class="projectsImg">
                 <img src="img/projects.png" alt="project image">
