--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 <body>
     <div class="pageWrapper">
         <nav>
-            <header><a href="index.html">Damian Zalewski IT</a></header>
+            <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
             <ul>
                 <!--            <a href="#aboutMeAnchor"><li>O mnie</li></a>-->
                 <!--            <a href="#mySkillsAnchor"><li>Technologie</li></a>-->
